/**
 * @ File name: ReaderInterface.java
 * @ Author1: Danilo Silva 113384
 * @ Author2: Tomás Fernandes 112981
 * @ Modified time: 2024-04-22 14:44:21
 */

package lab08.ProcessadorTexto;

public interface ReaderInterface {
    public boolean hasNext();
    public String next();
}
